--- a/css/style.scss
+++ b/css/style.scss
@@ -280,10 +280,11 @@ h2 {
   &__bg {
     position: absolute;
     left: calc(50% - 690px/2 + 225px);
-    top: calc(50% - 259px/2 - 1285.5px);
+    top: calc(50% - 185.5px - 1288.5px);
     mix-blend-mode: multiply;
     opacity: 0.7;
     max-width: 690px;
+
     width: 100%;
     @media(max-width: 1024px) {
       left: 0px;
@@ -291,7 +292,7 @@ h2 {
     }
     @media(max-width: 768px) {
       left: 0px;
-      top: 270px;
+      top: 210px;
     }
     img {
       width: 100%;
