--- a/css/style.scss
+++ b/css/style.scss
@@ -276,11 +276,12 @@ h2 {
   z-index: 30;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: relative;
   &__bg {
     position: absolute;
     left: calc(50% - 690px/2 + 225px);
-    top: calc(50% - 185.5px - 1288.5px);
+    top: calc(50% - 294px/2 - 1285.5px);
     mix-blend-mode: multiply;
     opacity: 0.7;
     max-width: 690px;
@@ -328,7 +329,6 @@ h2 {
     max-width: 619px;
     width: 100%;
     z-index: 10;
-    padding: 10px;
     img {
       object-fit: contain;
       width: 100%;
