--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ body {
   flex-direction: column;
   min-height: 100%;
   position: relative;
-  max-width: 1920px;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
@@ -1103,85 +1102,85 @@ h2 {
 }
 
 .animation-title {
-  transform: translate(0, -50%);
+  transform: translate(0, -80%);
   opacity: 0;
-  transition: all 0.5s ease 0s;
+  transition: 0s;
 }
 
 .animation-title._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 0.4s ease 0s;
+  transition: all 1s ease-in-out;
 }
 
 .animation-list {
   opacity: 0;
-  transition: all 0.2s ease 0s;
+  transition: 0s;
 }
 
 .animation-list._active {
   opacity: 1;
-  transition: all 1s ease 0.5s;
+  transition: opacity 4s;
 }
 
 .animation-btn {
-  transform: translate(0, 50%);
+  transform: translate(0, 80%);
   opacity: 0;
-  transition: all 0.5s ease 0s;
+  transition: 0s;
 }
 
 .animation-btn._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 0.4s ease 0s;
+  transition: all 1s ease-in-out;
 }
 
 .animation-banner {
   transform: translate(120%, 0);
   opacity: 0;
-  transition: all 0.5s ease 0s;
+  transition: 0s;
 }
 
 .animation-banner._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 0.4s ease 0s;
+  transition: all 1s ease-in-out;
 }
 
 .animation-atoll-img {
   transform: translate(-120%, 0);
   opacity: 0;
-  transition: all 0.5s ease 0s;
+  transition: 0s;
 }
 
 .animation-atoll-img._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 0.4s ease 0s;
+  transition: all 1s ease-in-out;
 }
 
 .animation-atoll__text-one {
-  transform: translate(0, -100%);
+  transform: translate(0, 100%);
   opacity: 0;
-  transition: all 0.4s ease 0s;
+  transition: 0s;
 }
 
 .animation-atoll__text-one._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 0.6s ease 0s;
+  transition: all 0.8s ease-in-out;
 }
 
 .animation-atoll__text-two {
-  transform: translate(0, -100%);
+  transform: translate(0, 100%);
   opacity: 0;
-  transition: all 1s ease 0s;
+  transition: 0s;
 }
 
 .animation-atoll__text-two._active {
   transform: translate(0, 0);
   opacity: 1;
-  transition: all 1s ease 0s;
+  transition: all 1.5s ease-in-out;
 }
 
 .animation-contacts {
