--- a/privacy/css/style.css
+++ b/privacy/css/style.css
@@ -80,7 +80,6 @@ body {
   flex-direction: column;
   min-height: 100%;
   position: relative;
-  max-width: 1920px;
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
@@ -300,7 +299,9 @@ body {
   display: flex;
   align-items: center;
   cursor: pointer;
-  margin-top: 20px;
+  margin: 20px auto;
+  max-width: 750px;
+  width: 100%;
 }
 .politics__btn a {
   font-family: "Source Sans Pro", sans-serif;
@@ -315,6 +316,9 @@ body {
 }
 .politics__text {
   position: relative;
+  max-width: 750px;
+  width: 100%;
+  margin: 0 auto;
 }
 .politics__bg {
   position: absolute;
@@ -329,18 +333,19 @@ body {
 
 .politics__window {
   padding: 0 15px;
-  max-width: 854px;
+  max-width: 1440px;
   width: 100%;
 }
 .politics__window h1 {
-  max-width: 768px;
+  max-width: 1090px;
   width: 100%;
+  margin: 0 auto;
   font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
-  font-weight: 800;
-  font-size: 48px;
-  line-height: 120%;
-  padding-bottom: 40px;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 110%;
+  padding-bottom: 35px;
   /* or 58px */
   text-align: center;
   /* Black */
@@ -351,43 +356,44 @@ body {
     font-size: 24px;
   }
 }
-.politics__window p {
+.politics__window .politics-privacy__text {
   position: relative;
-  max-height: 530px;
-  padding-right: 86px;
+  max-height: 640px;
+  padding-right: 40px;
   font-family: "Source Sans Pro", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 17px;
+  font-size: 16px;
+  line-height: 140%;
   overflow-y: scroll;
 }
-.politics__window p span a {
+.politics__window .politics-privacy__text span a {
   color: #000;
 }
 @media (max-width: 800px) {
-  .politics__window p {
+  .politics__window .politics-privacy__text {
     padding-right: 30px;
   }
 }
 @media (max-width: 520px) {
-  .politics__window p {
+  .politics__window .politics-privacy__text {
     padding-right: 15px;
     max-height: 370px;
   }
 }
-.politics__window p::-webkit-scrollbar {
+.politics__window .politics-privacy__text::-webkit-scrollbar {
   z-index: 200;
   width: 3px;
 }
 @media (max-width: 520px) {
-  .politics__window p::-webkit-scrollbar {
+  .politics__window .politics-privacy__text::-webkit-scrollbar {
     display: none;
   }
 }
-.politics__window p::-webkit-scrollbar-track {
+.politics__window .politics-privacy__text::-webkit-scrollbar-track {
   background: #A6A6A6;
 }
-.politics__window p::-webkit-scrollbar-thumb {
+.politics__window .politics-privacy__text::-webkit-scrollbar-thumb {
   background-color: #00BD56;
 }
 
