--- a/privacy/css/style.css
+++ b/privacy/css/style.css
@@ -26,6 +26,7 @@ body {
   top: -403px;
   background: radial-gradient(50% 50% at 50% 50%, rgba(181, 223, 148, 0.8) 0%, rgba(181, 223, 148, 0) 100%);
 }
+
 @media (max-width: 768px) {
   .wrapper__bg {
     position: absolute;
@@ -83,6 +84,7 @@ body {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
+  max-width: 3000px;
 }
 
 
