--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,12 @@ h2 {
   width: 14px;
   height: 24px;
   left: 0;
+  transition: all 200ms ease-in;
 }
 .list li:hover {
   transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
 }
 
 .header {
@@ -273,9 +276,10 @@ h2 {
 }
 .banner__bg {
   position: absolute;
-  left: calc(50% - 345px + 225px);
-  top: calc(50% - 147px - 1285.5px);
+  right: 150px;
+  top: 184px;
   mix-blend-mode: multiply;
+  background-blend-mode: multiply;
   opacity: 0.7;
   max-width: 690px;
   width: 100%;
@@ -1250,5 +1254,3 @@ h2 {
   -webkit-filter: opacity(1); /* For IE8 and earlier */
   transition: all 0.8s ease 0.2s;
 }
-
-/*# sourceMappingURL=style.css.map */
